<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bird Observations</string>

    <string name="form_description">
        New Observation
    </string>
    <string name="form_species_name">Name: </string>
    <string name="form_notes">Notes: </string>
    <string name="form_rarity">Rarity: </string>

    <string name="form_rarity_type1">Common</string>
    <string name="form_rarity_type2">Rare</string>
    <string name="form_rarity_type3">Extremely rare</string>

    <string name="order_by_name">Name of species</string>
    <string name="order_by_rarity">Rarity</string>
    <string name="order_by_time">Time</string>

    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="new_button">New Observation</string>
</resources>
