<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".screens.FormActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_form">

    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/form_description"
        android:textColor="#ce3232"
        android:textSize="40sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/name_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/form_species_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/notes_form"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="top"
        android:hint="@string/form_notes"
        android:fitsSystemWindows="true"
        android:breakStrategy="balanced"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:padding="5dp"
        tools:targetApi="m" />

    <Spinner
        android:id="@+id/spinnerRarity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/form_rarity_type_list" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/buttonLoadPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@id/imgView"
            android:onClick="upload"
            android:text="@string/load_picture" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:onClick="confirm"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/add_button"
            android:textColor="#fff" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:onClick="cancel"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/cancel_button"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>